fix(app-title): adjust right margin for improved spacing

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -239,7 +239,7 @@ mat-sidenav-content {
 
 .app-title {
   margin-left: 4px;
-  margin-right: 1em;
+  margin-right: 8px;
   font-size: 1.2em;
   position: relative;
   display: inline-flex;
